# HEngine

./: CMakeLists.txt  README.md  a.out  ckksmultest.cu  ckksnet.cu  ckksnet2.cu  ckksnetbatch.cu  ckksnetbatch2.cu  ckksnetbatch_t.cu  ckksnetbatchold.cu  ckksnetbatchtest.cu  ckkstest.cu  ckkstest.cu.bak  convnet copy 2.cu  convnet copy.cu  convnet.cu  convtest.cu  cufft.cu  encoder.cuh  encryptor.cuh  evaluator.cuh  fc1weight.txt  fft.py  genparme2.py  genparme260bits.py  genprame.py  helper.cuh  homonet.py  library.cu  library.cuh  maptable.py  matrixtest.cu  mempool.cuh  net.cu  net.h  net.py  netparams.py  ntt_60bit.cuh  nttopt.cu  parameter.cuh  (+19 more)
